# parallel-sys

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.c
report/: exercise1.typ  exercise2.typ  exercise3.typ  exercise4.typ  exercise5.typ  exercise6.typ  exercise7.typ  main.typ
scripts/: build.nu  build.sh  execute.nu  execute.sh
scripts/data/: process.py  process1.py  process2.py  process3.py  process4.py  process5.py  process6.py  process7.py
src/: barriers.c  better_mul.c  exercises.h  false_sharing.c  game_of_life.c  gaussian_elimination.c  macros.h  main.c  merge_sort.c  pi_calc.c  shared_var.c  utility.c  utility.h
